--- a/Banner-js-jquery/WaterfallFlow.html
+++ b/Banner-js-jquery/WaterfallFlow.html
@@ -11,7 +11,7 @@
     <span>|</span>
     <a href="#" id="SignUpLink">Sign Up Now</a>
 </div>
-
+<div class="line"></div>
 <div id="layout-mask"></div>
 <div id="layout-pop">
     <div id="close" class="close">×</div>
@@ -62,6 +62,8 @@
     </div>
 </div>
 
+
+<div></div>
 <script src="jquery-3.3.1/jquery-3.3.1.js" type="text/javascript"></script>
 <script src="js/waterfallFlow.js" type="text/javascript"></script>
 </body>
